new color theme and layout

--- a/DriverTracker/Views/Home/About.cshtml
+++ b/DriverTracker/Views/Home/About.cshtml
@@ -2,10 +2,17 @@
     ViewData["Title"] = "About DriverTracker";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>DriverTracker will be an ASP.NET-based analytics application for taxicab drivers and transportation network
-carriers to analyze performance of employees. When a ride is requested, representatives can enter the
-request time into the system. Drivers then input their actual pickup times, the start and endpoints,
-and the arrival time and fare. This will be facilitated by the mobile DriverTracker app, which will use
-GPS to verify the driver's location and digital signatures to prevent rogue modifications to the app.</p>
+<div class="card w-100">
+    <div class="card-body">
+        <h3 class="card-title">@ViewData["Message"]</h3>
+
+        <p class="card-text">
+            DriverTracker will be an ASP.NET-based analytics application for taxicab drivers and transportation network
+            carriers to analyze performance of employees. When a ride is requested, representatives can enter the
+            request time into the system. Drivers then input their actual pickup times, the start and endpoints,
+            and the arrival time and fare. This will be facilitated by the mobile DriverTracker app, which will use
+            GPS to verify the driver's location and digital signatures to prevent rogue modifications to the app.
+        </p>
+    </div>
+</div>
