--- a/DriverTracker/src/app/driver-details/driver-details.component.html
+++ b/DriverTracker/src/app/driver-details/driver-details.component.html
@@ -1,148 +1,159 @@
 <ng-template [ngIf]="driverStatistics != null">
-    <h2>Driver Statistics</h2>
-    <ul>
-        <li>Pickups: {{driverStatistics.pickups}}</li>
-        <li>Miles driven: {{driverStatistics.milesDriven}}</li>
-        <li *ngIf="driverStatistics.averagePickupDelay != null">Average pickup delay: {{driverStatistics.averagePickupDelay}}</li>
-        <li>Total fares: {{driverStatistics.totalFares}}</li>
-        <li>Total fuel costs: {{driverStatistics.totalCosts}}</li>
-    </ul>
+    <div class="card w-md-50 mb-2">
+        <div class="card-header">
+            Summary
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Pickups: {{driverStatistics.pickups}}</li>
+            <li class="list-group-item">Miles driven: {{driverStatistics.milesDriven}}</li>
+            <li class="list-group-item" *ngIf="driverStatistics.averagePickupDelay != null">Average pickup delay: {{driverStatistics.averagePickupDelay}}</li>
+            <li class="list-group-item">Total fares: {{driverStatistics.totalFares}}</li>
+            <li class="list-group-item">Total fuel costs: {{driverStatistics.totalCosts}}</li>
+        </ul>
+    </div>
 </ng-template>
 
 <ng-template [ngIf]="driver != null">
-    <h2>Driver Details
-        <button class="btn btn-primary" (click)="clickEditDriverDetails()" [disabled]="editingDriverDetails">
-            <i class="fas fa-edit"></i><span class="sr-only">Edit</span>
-        </button>
-    </h2>
+    <div class="card w-100 mb-2">
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <span class="d-flex-inline">Details</span>
+            <button class="btn btn-primary d-flex-inline" (click)="clickEditDriverDetails()" [disabled]="editingDriverDetails">
+                <i class="fas fa-edit"></i><span class="sr-only">Edit</span>
+            </button>
+        </div>
 
-    <div>
-        <h4>Driver</h4>
-        <hr />
-        <ng-template [ngIf]="editingDriverDetails">
-            <form (ngSubmit)="onSubmitDriverDetails()" #driverDetailsForm="ngForm">
+        <div class="card-body">
+            <ng-template [ngIf]="editingDriverDetails">
+                <form (ngSubmit)="onSubmitDriverDetails()" #driverDetailsForm="ngForm">
+                    <dl class="row">
+                        <dt class="col-sm-5 card-text">
+                            Name
+                        </dt>
+                        <dd class="col-sm-5 card-text">
+                            <input type="text" class="form-control" id="name" required name="name" [(ngModel)]="driver.name" />
+                        </dd>
+                        <dt class="col-sm-5 card-text">
+                            License Number
+                        </dt>
+                        <dd class="col-sm-5 card-text">
+                            <input type="text" class="form-control" id="licenseNumber" required name="licenseNumber" [(ngModel)]="driver.licenseNumber" />
+                        </dd>
+                    </dl>
+                    <button type="submit" class="btn btn-success mr-2" [disabled]="!driverDetailsForm.form.valid">Save</button>
+                    <button type="button" class="btn btn-secondary" (click)="cancelEditDriverDetails()">Cancel</button>
+                </form>
+            </ng-template>
+            <ng-template [ngIf]="!editingDriverDetails">
                 <dl class="row">
-                    <dt class="col-sm-5">
+                    <dt class="col-sm-5 card-text">
                         Name
                     </dt>
-                    <dd class="col-sm-5">
-                        <input type="text" class="form-control" id="name" required name="name" [(ngModel)]="driver.name" />
+                    <dd class="col-sm-5 card-text">
+                        {{driver.name}}
                     </dd>
-                    <dt class="col-sm-5">
+                    <dt class="col-sm-5 card-text">
                         License Number
                     </dt>
-                    <dd class="col-sm-5">
-                        <input type="text" class="form-control" id="licenseNumber" required name="licenseNumber" [(ngModel)]="driver.licenseNumber" />
+                    <dd class="col-sm-5 card-text">
+                        {{driver.licenseNumber}}
                     </dd>
                 </dl>
-                <button type="submit" class="btn btn-success mr-2" [disabled]="!driverDetailsForm.form.valid">Save</button>
-                <button type="button" class="btn btn-secondary" (click)="cancelEditDriverDetails()">Cancel</button>
-            </form>
-        </ng-template>
-        <ng-template [ngIf]="!editingDriverDetails">
-            <dl class="row">
-                <dt class="col-sm-5">
-                    Name
-                </dt>
-                <dd class="col-sm-5">
-                    {{driver.name}}
-                </dd>
-                <dt class="col-sm-5">
-                    License Number
-                </dt>
-                <dd class="col-sm-5">
-                    {{driver.licenseNumber}}
-                </dd>
-            </dl>
-        </ng-template>
+            </ng-template>
+        </div>
     </div>
 </ng-template>
 
-<h3>Driver's Legs</h3>
-
-<ng-template [ngIf]="legs != null && legs.length > 0">
-    <div class="table-responsive-lg">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>
-                        Start Address
-                    </th>
-                    <th>
-                        Requested Pickup Time
-                    </th>
-                    <th>
-                        Actual Start Time
-                    </th>
-                    <th>
-                        Destination Address
-                    </th>
-                    <th>
-                        Arrival Time
-                    </th>
-                    <th class="d-none d-md-table-cell">
-                        Distance
-                    </th>
-                    <th>
-                        Fare
-                    </th>
-                    <th class="d-none d-md-table-cell">
-                        Passengers Aboard
-                    </th>
-                    <th>
-                        Pickups
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let leg of legs">
-                    <td>
-                        {{leg.startAddress}}
-                    </td>
-                    <td>
-                        {{leg.pickupRequestTime | date:'short'}}
-                    </td>
-                    <td>
-                        {{leg.startTime | date:'short'}}
-                    </td>
-                    <td>
-                        {{leg.destinationAddress}}
-                    </td>
-                    <td>
-                        {{leg.arrivalTime | date:'short'}}
-                    </td>
-                    <td class="d-none d-md-table-cell">
-                        {{leg.distance}}
-                    </td>
-                    <td>
-                        {{leg.fare}}
-                    </td>
-                    <td class="d-none d-md-table-cell">
-                        {{leg.numOfPassengersAboard}}
-                    </td>
-                    <td>
-                        {{leg.numOfPassengersPickedUp}}
-                    </td>
-                    <td>
-                        <span class="btn-group" role="group">
-                            <button type="button" class="btn btn-secondary" (click)="showLegDetails(leg, legDetails)">Details</button>
-                            <button type="button" class="btn btn-secondary" (click)="showDeleteConfirm(leg, deleteConfirm)">Delete</button>
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="10">
-                        <button type="button" class="btn btn-primary" (click)="showLegDetails(null, legDetails)">New Leg</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+<div class="card w-100 mb-2">
+    <div class="card-header">
+        Legs
     </div>
-</ng-template>
-<ng-template [ngIf]="legs == null || legs.length == 0">
-    <p>No legs have been entered.</p>
-</ng-template>
+
+    <div class="card-body">
+        <ng-template [ngIf]="legs != null && legs.length > 0">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                Start Address
+                            </th>
+                            <th>
+                                Requested Pickup Time
+                            </th>
+                            <th>
+                                Actual Start Time
+                            </th>
+                            <th>
+                                Destination Address
+                            </th>
+                            <th>
+                                Arrival Time
+                            </th>
+                            <th class="d-none d-md-table-cell">
+                                Distance
+                            </th>
+                            <th>
+                                Fare
+                            </th>
+                            <th class="d-none d-md-table-cell">
+                                Passengers Aboard
+                            </th>
+                            <th>
+                                Pickups
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let leg of legs">
+                            <td>
+                                {{leg.startAddress}}
+                            </td>
+                            <td>
+                                {{leg.pickupRequestTime | date:'short'}}
+                            </td>
+                            <td>
+                                {{leg.startTime | date:'short'}}
+                            </td>
+                            <td>
+                                {{leg.destinationAddress}}
+                            </td>
+                            <td>
+                                {{leg.arrivalTime | date:'short'}}
+                            </td>
+                            <td class="d-none d-md-table-cell">
+                                {{leg.distance}}
+                            </td>
+                            <td>
+                                {{leg.fare}}
+                            </td>
+                            <td class="d-none d-md-table-cell">
+                                {{leg.numOfPassengersAboard}}
+                            </td>
+                            <td>
+                                {{leg.numOfPassengersPickedUp}}
+                            </td>
+                            <td>
+                                <span class="btn-group" role="group">
+                                    <button type="button" class="btn btn-secondary" (click)="showLegDetails(leg, legDetails)">Details</button>
+                                    <button type="button" class="btn btn-secondary" (click)="showDeleteConfirm(leg, deleteConfirm)">Delete</button>
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="10">
+                                <button type="button" class="btn btn-primary" (click)="showLegDetails(null, legDetails)">New Leg</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </ng-template>
+        <ng-template [ngIf]="legs == null || legs.length == 0">
+            <p class="card-text">No legs have been entered.</p>
+        </ng-template>
+    </div>
+</div>
 
 <div>
     <a class="btn btn-default" href="/Drivers/">Back to Drivers List</a>
