--- a/DriverTracker/Views/PickupPredictor/Index.cshtml
+++ b/DriverTracker/Views/PickupPredictor/Index.cshtml
@@ -5,7 +5,7 @@
 <app-root></app-root>
 
 <div>
-    <a asp-action="Index" asp-controller="Drivers">Drivers List</a>
+    <a class="btn btn-default" asp-action="Index" asp-controller="Drivers">Drivers List</a>
 </div>
 
 @* Angular scripts *@
