--- a/DriverTracker/wwwroot/css/site.css
+++ b/DriverTracker/wwwroot/css/site.css
@@ -1,8 +1,185 @@
-﻿body {
+﻿/* see https://github.com/twbs/bootstrap/issues/21943 */
+@media (min-width: 576px) {
+    .w-sm-25 {
+        width: 25% !important;
+    }
+
+    .w-sm-50 {
+        width: 50% !important;
+    }
+
+    .w-sm-75 {
+        width: 75% !important;
+    }
+
+    .w-sm-100 {
+        width: 100% !important;
+    }
+
+    .w-sm-auto {
+        width: auto !important;
+    }
+
+    .h-sm-25 {
+        height: 25% !important;
+    }
+
+    .h-sm-50 {
+        height: 50% !important;
+    }
+
+    .h-sm-75 {
+        height: 75% !important;
+    }
+
+    .h-sm-100 {
+        height: 100% !important;
+    }
+
+    .h-sm-auto {
+        height: auto !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .w-md-25 {
+        width: 25% !important;
+    }
+
+    .w-md-50 {
+        width: 50% !important;
+    }
+
+    .w-md-75 {
+        width: 75% !important;
+    }
+
+    .w-md-100 {
+        width: 100% !important;
+    }
+
+    .w-md-auto {
+        width: auto !important;
+    }
+
+    .h-md-25 {
+        height: 25% !important;
+    }
+
+    .h-md-50 {
+        height: 50% !important;
+    }
+
+    .h-md-75 {
+        height: 75% !important;
+    }
+
+    .h-md-100 {
+        height: 100% !important;
+    }
+
+    .h-md-auto {
+        height: auto !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .w-lg-25 {
+        width: 25% !important;
+    }
+
+    .w-lg-50 {
+        width: 50% !important;
+    }
+
+    .w-lg-75 {
+        width: 75% !important;
+    }
+
+    .w-lg-100 {
+        width: 100% !important;
+    }
+
+    .w-lg-auto {
+        width: auto !important;
+    }
+
+    .h-lg-25 {
+        height: 25% !important;
+    }
+
+    .h-lg-50 {
+        height: 50% !important;
+    }
+
+    .h-lg-75 {
+        height: 75% !important;
+    }
+
+    .h-lg-100 {
+        height: 100% !important;
+    }
+
+    .h-lg-auto {
+        height: auto !important;
+    }
+}
+
+@media (min-width: 1200px) {
+    .w-xl-25 {
+        width: 25% !important;
+    }
+
+    .w-xl-50 {
+        width: 50% !important;
+    }
+
+    .w-xl-75 {
+        width: 75% !important;
+    }
+
+    .w-xl-100 {
+        width: 100% !important;
+    }
+
+    .w-xl-auto {
+        width: auto !important;
+    }
+
+    .h-xl-25 {
+        height: 25% !important;
+    }
+
+    .h-xl-50 {
+        height: 50% !important;
+    }
+
+    .h-xl-75 {
+        height: 75% !important;
+    }
+
+    .h-xl-100 {
+        height: 100% !important;
+    }
+
+    .h-xl-auto {
+        height: auto !important;
+    }
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    background-color: white;
-    color: black;
+    background-color: #252525;
+    color: white;
+}
+
+a {
+    color: #f2f224;
+}
+
+a:hover {
+    color: #f9f99a;
 }
 
 .body-content {
@@ -11,4 +188,50 @@
 
 h1, h2 {
     font-family: Raleway, Arial, Helvetica, sans-serif;
+}
+
+.bg-light {
+    background-color: #f2f224!important;
+}
+
+.btn-default {
+    border-color: #f2f224;
+    background-color: #252525;
+    color: #f2f224;
+}
+
+.btn-primary {
+    background-color: #a06067;
+    border-color: #a06067;
+}
+
+.card-title, .card-text {
+    color: #252525;
+}
+
+.card-header {
+    background-color: #88abc3;
+    color: #252525;
+    font-family: 'Passion One', sans-serif;
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+.card .list-group {
+    background-color: white;
+    color: #252525;
+}
+
+.card .table {
+    background-color: white;
+    color: #252525;
+}
+
+.modal-content {
+    background-color: white;
+    color: black;
+}
+
+.navbar .navbar-brand {
+    font-family: 'Seymour One', sans-serif;
 }
